# deducers

./: .gitignore  Cargo.toml  Dioxus.toml  Justfile  deducers.service.template  style.scss  todo.md
assets/: client.js  deducers_banner.psd  sounds.js  style.css
backend/: Cargo.toml
backend/src/: game_state.rs  items.rs  main.rs  openai.rs  question_queue.rs
data/: subtlex.csv
dioxus-test/: Cargo.toml  Justfile  style.scss
dioxus-test/src/: build.rs  connection.rs  gameview.rs  main.rs  style.css
dioxus-test/src/ui/: gameview.rs  items.rs  leaderboard.rs  management.rs  mod.rs
frontend/: Cargo.toml
frontend/src/: game_state.rs  items.rs  networking.rs
godot/: LeaderboardItem.tscn  Main.gd  Main.tscn  QuestionQueueItem.gd  QuestionQueueItem.tscn  deducers.gdextension  export_presets.cfg  icon.svg.import  project.godot
godot/Items/: Items.gd  Items.tscn  ItemsAnswerBox.tscn  ItemsHeader.tscn  ItemsItem.tscn
godot/Leaderboard/: Leaderboard.gd  Leaderboard.tscn  LeaderboardItem.tscn
godot/Management/: Management.tscn
godot/QuestionVotes/: QuestionVotes.tscn  QuestionVotesItem.tscn
godot/Resources/: button_pressed.mp3.import  coin.png.import  coin_added.mp3.import  game_start.mp3.import  guess_correct.mp3.import  guess_incorrect.mp3.import  item_added.mp3.import  kick.png.import  question_added.mp3.import  star.png.import  typing.mp3.import
rust/: Cargo.toml
rust/src/: game_state.rs  items.rs  leaderboard.rs  lib.rs  main.rs  networking.rs  questions_queue.rs
src/: backend.rs  build.rs  client.js  connection.rs  frontend.rs  lobby_utils.rs  main.rs  style.css  style.scss  words.txt
src/backend/: items.rs  mod.rs  openai.rs  parse_words.rs  question_queue.rs  words.rs  words.txt
src/build_utils/: mod.rs  subtlex.rs  wordnet.rs
src/frontend/: gamesettings.rs  gameview.rs  items_display.rs  leaderboard_display.rs  management_display.rs  question_queue_display.rs  quizmaster.rs
src/ui/: connection.rs  gamesettings.rs  gameview.rs  items_display.rs  leaderboard_display.rs  management.rs  management_display.rs  mod.rs  question_queue.rs  question_queue_display.rs  quizmaster.rs  tutorial.rs
