[package]
name = "deducers"
edition = "2021"
build = "src/build.rs"

[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
dioxus = "0.4.3"
dioxus-liveview = { version = "0.4.3", features = ["axum"] }
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.77"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = "0.11.23"
tower-http = { version = "0.4.0", features = ["fs"] }
regex = "1.10.2"
futures = "0.3.30"
once_cell = "1.19.0"
rand = "0.8.5"

[build-dependencies]
anyhow = "1.0.77"
rsass = "0.28.6"
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }
