[package]
name = "deducers"
edition = "2021"
version = "0.1.0"

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
dioxus = "0.4.3"
dioxus-liveview = { version = "0.4.3", features = ["axum"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread"] }
anyhow = "1.0.86"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
reqwest = "0.12.5"
tower-http = { version = "0.4.0", features = ["fs"] }
regex = "1.10.6"
futures = "0.3.30"
once_cell = "1.19.0"
rand = "0.8.5"
strum = "0.26.3"
strum_macros = "0.26.4"
rsass = "0.28.10"

[profile.release]
lto = true
