[package]
name = "dioxus-test"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
dioxus = "0.4.3"
dioxus-liveview = { version = "0.4.3", features = ["axum"] }
tokio = { version = "1.35.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[build-dependencies]
rsass = "0.28.6"
