[package]
name = "deducers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
    "lazy-function-tables",
] }
tokio = { version = "1.35.0", features = ["full"] }
reqwest = "0.11.22"
urlencoding = "2.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.8.5"

# Enable optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
